--- a/design_system/index.html
+++ b/design_system/index.html
@@ -267,83 +267,72 @@
     </div>
   </div>
   <div class="blankHXS"></div>
+  <div class="wrapper">
 
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
 
-  <div class="Grid Grid--gutters Grid--cols-2 wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-
-        <h3><strong>Context</strong></h3>
-        <h4>As a UX designer, I've always had a passion for learning basic coding. I've designed and maintained this
-          site since the end of 2020. This journey has been a valuable learning experience. It has allowed me to not
-          only update the design system and contemplate layout and grid choices but also to focus on component reuse,
-          ensuring scalability, and implementing effective UX design patterns.
-        </h4>
+          <h3><strong>Context</strong></h3>
+          <h4>As a UX designer, I've always had a passion for learning basic coding. I've designed and maintained this
+            site since the end of 2020. This journey has been a valuable learning experience. It has allowed me to not
+            only update the design system and contemplate layout and grid choices but also to focus on component reuse,
+            ensuring scalability, and implementing effective UX design patterns.
+          </h4>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <h3><strong>Main goal</strong></h3>
+          <h4>The primary objective of this design system is to center on the showcase of UX case studies. It's
+            essential
+            that the overall design thinking structure is presented clearly and is user-friendly. Key information should
+            be displayed by default. While users should have the option to delve deeper if desired, the design should
+            also
+            facilitate quick scanning without requiring excessive time spent on a single case study.
+          </h4>
+        </div>
       </div>
     </div>
-    <div class="Grid-cell">
-      <div class="element">
 
-        <h3><strong>Main goal</strong></h3>
-        <h4>The primary objective of this design system is to center on the showcase of UX case studies. It's essential
-          that the overall design thinking structure is presented clearly and is user-friendly. Key information should
-          be displayed by default. While users should have the option to delve deeper if desired, the design should also
-          facilitate quick scanning without requiring excessive time spent on a single case study.
+    <div class="Grid Grid--gutters Grid--cols-4 wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <h3><strong>Timeline</strong></h3>
+          <h4>2022 - present</h4>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <h3><strong>Skills</strong></h3>
+          <h4>Design System</h4>
+          <h4>Responsive design </h4>
+          <h4>HTML&#47;CSS&#47;JavaScript</h4>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <h3><strong>Role</strong></h3>
+          <h4>Design</h4>
+          <h4>Implement</h4>
+          <h4>Test</h4>
+          <h4>Iterate</h4>
 
-
-
-
-
-        </h4>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <h3><strong>Tool</strong></h3>
+          <h4>VS Code</h4>
+          <h4>WebAIM</h4>
+          <h4>Photoshop</h4>
+        </div>
       </div>
     </div>
+    <div class="blankHS"></div>
+
+
   </div>
-
-
-
-
-
-
-  <div class="Grid Grid--gutters Grid--cols-4 wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h3><strong>Timeline</strong></h3>
-        <h4>2022 - present</h4>
-
-
-      </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
-        <h3><strong>Skills</strong></h3>
-        <h4>Design System</h4>
-        <h4>Responsive design </h4>
-        <h4>HTML&#47;CSS&#47;JavaScript</h4>
-
-      </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
-        <h3><strong>Role</strong></h3>
-        <h4>Design</h4>
-        <h4>Implement</h4>
-        <h4>Test</h4>
-        <h4>Iterate</h4>
-
-      </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
-        <h3><strong>Tool</strong></h3>
-        <h4>VS Code</h4>
-        <h4>WebAIM</h4>
-        <h4>Photoshop</h4>
-      </div>
-    </div>
-  </div>
-  <div class="blankHS"></div>
-
-
 
 
 
@@ -2656,7 +2645,9 @@
 
 
                 <div class="column">
-                  <label for="password"><h5>Password</h5></label>
+                  <label for="password">
+                    <h5>Password</h5>
+                  </label>
 
                   <input class="PWinput" type="password" id="password" placeholder="Enter password">
 
@@ -3900,29 +3891,31 @@
               <h2 class="element">Slideshow Title</h2>
             </div>
           </div>
-          <div class="wrapper LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
-            aria-label="LRcarousel" Tabindex="0" id="carousel1">
-            <div class="carousel__nav Grid-cell">
-              <a class="slider-nav" aria-label="Go to slide 1">
-                <div>Lorem ipsum</div>
-              </a>
-              <a class="slider-nav" aria-label="Go to slide 2">
-                <div>Lorem ipsum</div>
-              </a>
-              <a class="slider-nav" aria-label="Go to slide 3">
-                <div>Lorem ipsum</div>
-              </a>
-            </div>
-            <div class="LRslides Grid-cell">
-              <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                <img src="../Placeholder.svg" alt="">
+          <div class="wrapper">
+            <div class=" LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter" aria-label="LRcarousel"
+              Tabindex="0" id="carousel1">
+              <div class="carousel__nav Grid-cell">
+                <a class="slider-nav" aria-label="Go to slide 1">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="slider-nav" aria-label="Go to slide 2">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="slider-nav" aria-label="Go to slide 3">
+                  <div>Lorem ipsum</div>
+                </a>
               </div>
-              <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
-                <img src="../Placeholder.svg" alt="">
+              <div class="LRslides Grid-cell">
+                <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                  <img src="../Placeholder.svg" alt="">
+                </div>
+                <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+                  <img src="../Placeholder.svg" alt="">
 
-              </div>
-              <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
-                <img src="../Placeholder.svg" alt="">
+                </div>
+                <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+                  <img src="../Placeholder.svg" alt="">
+                </div>
               </div>
             </div>
           </div>
@@ -3992,30 +3985,32 @@
               <h2 class="element">Slideshow Title</h2>
             </div>
           </div>
+          <div class="wrapper">
 
-          <div class="wrapper LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
-            aria-label="LRcarousel" Tabindex="0" id="carousel2">
-            <div class="carousel__nav noBg Grid-cell">
-              <a class="slider-nav" aria-label="Go to slide 1">
-                <div>Lorem ipsum</div>
-              </a>
-              <a class="slider-nav" aria-label="Go to slide 2">
-                <div>Lorem ipsum</div>
-              </a>
-              <a class="slider-nav" aria-label="Go to slide 3">
-                <div>Lorem ipsum</div>
-              </a>
-            </div>
-            <div class="LRslides Grid-cell">
-              <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                <img src="../PlaceholderDark.svg" alt="">
+            <div class=" LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter" aria-label="LRcarousel"
+              Tabindex="0" id="carousel2">
+              <div class="carousel__nav noBg Grid-cell">
+                <a class="slider-nav" aria-label="Go to slide 1">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="slider-nav" aria-label="Go to slide 2">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="slider-nav" aria-label="Go to slide 3">
+                  <div>Lorem ipsum</div>
+                </a>
               </div>
-              <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
-                <img src="../PlaceholderDark.svg" alt="">
+              <div class="LRslides Grid-cell">
+                <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                  <img src="../PlaceholderDark.svg" alt="">
+                </div>
+                <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+                  <img src="../PlaceholderDark.svg" alt="">
 
-              </div>
-              <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
-                <img src="../PlaceholderDark.svg" alt="">
+                </div>
+                <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+                  <img src="../PlaceholderDark.svg" alt="">
+                </div>
               </div>
             </div>
           </div>
@@ -4376,55 +4371,115 @@
     </div>
   </button>
   <!--back to top-->
-  <!--footer-->
   <footer class="GreyBg100">
-    <div class="blankHM"></div>
-    <div class="Grid Grid--gutters Grid--cols-2 wrapper Grid--center">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4> &#169; 2023 &#8212; VICKY WANG</h4>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
-          <div class="Grid-cell">
+
+    <div class="blankHS"></div>
+    <div class="wrapper">
+      <div class="Grid Grid--gutters Grid--1of3 ">
+        <div class="Grid-cell">
+
+          <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
-                <img title="Copy to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
-                  src="../icon/mail.svg" alt="Mail">
-                <p class="clickIconCopy">vickyw.design@gmail.com
-                </p>
+                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                  title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">vickyw.design@gmail.com</p>
               </button>
             </div>
-          </div>
-          <div class="Grid-cell">
             <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
             </a>
-          </div>
-          <div class="Grid-cell">
+
             <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub"
                 title="GitHub">
             </a>
-          </div>
-          <div class="Grid-cell">
+
             <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
             </a>
-          </div>
-          <div class="Grid-cell">
+
             <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
                 title="Instagram">
             </a>
+          </div>
+          <div class="blankHXS"></div>
+        </div>
+        <div class="Grid-cell">
+          <div class="Grid Grid--gutters Grid--cols-6">
+            <div class="Grid-cell">
+              <h5> <strong> Project </strong> </h5>
+              <div class="blankHXXS"></div>
+              <a href="/glorify/">
+                <h6> <strong class="Grey700">Glorify</strong> </h6>
+              </a>
+
+              <h6>Elevating Community Involvement</h6>
+              <div class="blankHXXS"></div>
+              <a href="/appointa/">
+                <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+              </a>
+              <h6>Simplifying Interview Coordination</h6>
+              <div class="blankHXXS"></div>
+              <a href="/seer/">
+                <h6> <strong class="Grey700">SEER</strong> </h6>
+              </a>
+              <h6>Empowering Brand Managers with Insights</h6>
+            </div>
+
+            <div class="Grid-cell">
+              <h5> <strong> Service </strong> </h5>
+              <div class="blankHXXS"></div>
+
+              <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+              <h6>Creating Intuitive User Experiences</h6>
+              <div class="blankHXXS"></div>
+
+              <h6> <strong class="Grey700">Design Research </strong> </h6>
+              <h6>In-depth Analysis for Targeted Solutions</h6>
+              <div class="blankHXXS"></div>
+
+              <h6> <strong class="Grey700">Web Development </strong> </h6>
+              <h6>Seamless Design Implementation</h6>
+              <div class="blankHXXS"></div>
+
+              <h6> <strong class="Grey700">Branding </strong> </h6>
+              <h6>Crafting Memorable Brand Identities</h6>
+            </div>
+
+            <div class="Grid-cell">
+              <h5> <strong> About </strong> </h5>
+              <div class="blankHXXS"></div>
+
+              <a href="/about">
+                <h6>About me</h6>
+              </a>
+              <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
           </div>
         </div>
       </div>
     </div>
-    <div class="blankHM"></div>
-    <div class="blankPhone"></div>
-    <!--footer-->
+
+  </footer>
 
   </footer>
 
