--- a/LASO/DesignSystem.html
+++ b/LASO/DesignSystem.html
@@ -40,7 +40,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
 
