--- a/LASO/index.html
+++ b/LASO/index.html
@@ -68,8 +68,8 @@
         <h5> Call us now: <strong>866-527-6757</strong></h5>
       </div>
     </div>
-    <div class="wrapper">
-      <a href="" class="widthLogo"><img class="logo pointer" src="LOGO.svg"></a>
+    <div class="wrapper centerHorz-spacearound">
+      <a><img class="logoLASO" src="LOGO.svg"></a>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu">
@@ -112,32 +112,33 @@
 
   <div class="blankHXS"></div>
 
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-3 ">
 
-  <div class="Grid Grid--gutters Grid--cols-3 wrapper">
-
-    <div class="Grid-cell">
-      <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_FDA.png" alt="Design">
-        <div class="column">
-          <h5><strong>FDA approved</strong></h5>
-          <h6>All of our generic medications are FDA approved and manufactured in FDA compliant facilities.</h6>
-        </div>
-      </h3>
-    </div>
-    <div class="Grid-cell">
-      <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_Shipping.png" alt="Design">
-        <div class="column">
-          <h5><strong>Shipping and handling</strong></h5>
-          <h6>Your order shipping is free, fast, and tracking information is always included.</h6>
-        </div>
-      </h3>
-    </div>
-    <div class="Grid-cell">
-      <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_PR.png" alt="Design">
-        <div class="column">
-          <h5><strong>Physician Recommended</strong></h5>
-          <h6>Nothing speaks louder than physicians recommending Rx Zero to their patients, friends, and family.</h6>
-        </div>
-      </h3>
+      <div class="Grid-cell">
+        <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_FDA.png" alt="Design">
+          <div class="column">
+            <h5><strong>FDA approved</strong></h5>
+            <h6>All of our generic medications are FDA approved and manufactured in FDA compliant facilities.</h6>
+          </div>
+        </h3>
+      </div>
+      <div class="Grid-cell">
+        <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_Shipping.png" alt="Design">
+          <div class="column">
+            <h5><strong>Shipping and handling</strong></h5>
+            <h6>Your order shipping is free, fast, and tracking information is always included.</h6>
+          </div>
+        </h3>
+      </div>
+      <div class="Grid-cell">
+        <h3 class="centerVer"> <img class="iconXL paddingM" src="icon_PR.png" alt="Design">
+          <div class="column">
+            <h5><strong>Physician Recommended</strong></h5>
+            <h6>Nothing speaks louder than physicians recommending Rx Zero to their patients, friends, and family.</h6>
+          </div>
+        </h3>
+      </div>
     </div>
   </div>
   <div class="blankHXS"></div>
@@ -223,23 +224,23 @@
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
       <div class="element">
-          <div class="WhiteBg shadowBoxLt borderRadiusM BgImgDrM ">
+        <div class="WhiteBg shadowBoxLt borderRadiusM BgImgDrM ">
+          <div class="element">
             <div class="element">
-              <div class="element">
-                <div class="blankHXS"></div>
+              <div class="blankHXS"></div>
 
-                <h4 class="widthMPhHalf"> I see thousands of patients every year. For many of them, the time and cost of
-                  keeping up with
-                  their medications is a huge burden. This has deeply bothered me for a very long time so I had to do
-                  something about it. We used our knowledge of the generic medication industry and worked with some
-                  great partners to come up with a simple solution that saves patients a ton of time and money. I love
-                  it and recommend it to all my patients, friends, and family. Now, I want to share it with everyone.
-                </h4>
-                <div class="blankHXS"></div>
-  
-                <h4><strong>Dr. H. Mizani, MD</strong></h4>
-                <h4>Founder, LASO Health</h4>
-              </div>
+              <h4 class="widthMPhHalf"> I see thousands of patients every year. For many of them, the time and cost of
+                keeping up with
+                their medications is a huge burden. This has deeply bothered me for a very long time so I had to do
+                something about it. We used our knowledge of the generic medication industry and worked with some
+                great partners to come up with a simple solution that saves patients a ton of time and money. I love
+                it and recommend it to all my patients, friends, and family. Now, I want to share it with everyone.
+              </h4>
+              <div class="blankHXS"></div>
+
+              <h4><strong>Dr. H. Mizani, MD</strong></h4>
+              <h4>Founder, LASO Health</h4>
+            </div>
           </div>
         </div>
       </div>
@@ -247,47 +248,49 @@
   </div>
   <div class="blankHXS"></div>
 
+  <div class=wrapper>
+    <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
 
-  <div class="Grid Grid--gutters Grid--cols-3 wrapper u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="element LASOBlueBg Grey100 borderRadiusM">
+            <img class="iconXL paddingM" src="iconS_ship.png" alt="Design">
+            <h5><strong class="Grey100">Free fast shipping</strong></h5>
+            <h5>Fast shipping (via USPS) is included in the price of your membership.</h5>
+            <div class="blankHXS"></div>
 
-    <div class="Grid-cell">
-      <div class="element">
-        <div class="element LASOBlueBg Grey100 borderRadiusM">
-          <img class="iconXL paddingM" src="iconS_ship.png" alt="Design">
-          <h5><strong>Free fast shipping</strong></h5>
-          <h5>Fast shipping (via USPS) is included in the price of your membership.</h5>
-          <div class="blankHXS"></div>
-
+          </div>
         </div>
       </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
+      <div class="Grid-cell">
+        <div class="element">
 
-        <div class="element LASOBlueBg Grey100 borderRadiusM">
+          <div class="element LASOBlueBg Grey100 borderRadiusM">
 
-          <img class="iconXL paddingM" src="iconS_chat1.png" alt="Design">
-          <h5><strong>REFILlS BY TEXT</strong></h5>
-          <h5>Just reply to our text message to get your refill delivered on time.</h5>
-          <div class="blankHXS"></div>
+            <img class="iconXL paddingM" src="iconS_chat1.png" alt="Design">
+            <h5><strong class="Grey100">REFILlS BY TEXT</strong></h5>
+            <h5>Just reply to our text message to get your refill delivered on time.</h5>
+            <div class="blankHXS"></div>
 
+          </div>
         </div>
       </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
+      <div class="Grid-cell">
+        <div class="element">
 
-        <div class="element LASOBlueBg Grey100 borderRadiusM">
+          <div class="element LASOBlueBg Grey100 borderRadiusM">
 
-          <img class="iconXL paddingM" src="iconS_chat.png" alt="Design">
-          <h5><strong>Friendly support</strong></h5>
-          <h5>We're here to help transfer your prescriptions and answer any questions.</h5>
-          <div class="blankHXS"></div>
+            <img class="iconXL paddingM" src="iconS_chat.png" alt="Design">
+            <h5><strong class="Grey100">Friendly support</strong></h5>
+            <h5>We're here to help transfer your prescriptions and answer any questions.</h5>
+            <div class="blankHXS"></div>
 
+          </div>
         </div>
       </div>
     </div>
   </div>
+
   <div class="blankHXS"></div>
 
   <div class="Grid Grid--full wrapper">
@@ -456,115 +459,118 @@
 <footer class="GreyBg100">
 
   <div class="blankHS"></div>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of3 ">
+      <div class="Grid-cell">
 
-  <div class="Grid Grid--gutters Grid--1of3 wrapper">
-    <div class="Grid-cell">
 
-
-      <div class="element">
         <div class="element">
-          <h5> <strong class="styleCap"> Connect with us </strong> </h5>
-        </div>
-        <div class="element">
+          <div class="element">
+            <h5> <strong class="styleCap"> Connect with us </strong> </h5>
+          </div>
+          <div class="element">
+            <div class="Grid Grid--gutters">
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class=" widthXXXS hoverGrey300  " src="AppStoreBadge.svg" alt="Twitter">
+              </a>
+              <div class="blankVerXS"></div>
+              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+                <img class=" widthXXXS hoverGrey300  " src="PlayStoreBadge.svg" alt="Instagram" title="Instagram">
+              </a>
+            </div>
+          </div>
           <div class="Grid Grid--gutters">
-            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class=" widthXXXS hoverGrey300  " src="AppStoreBadge.svg" alt="Twitter">
+            <a target="_blank" href="/">
+              <img class="marginXS iconM hoverGrey300 paddingS " src="Facebook.svg" alt="Facebook" title="Facebook">
             </a>
-            <div class="blankVerXS"></div>
-            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class=" widthXXXS hoverGrey300  " src="PlayStoreBadge.svg" alt="Instagram" title="Instagram">
+            <a target="_blank" href="/" title="Twitter">
+              <img class="marginXS iconM hoverGrey300 paddingS " src="Twitter.svg" alt="Twitter">
+            </a>
+
+            <a target="_blank" href="/">
+              <img class="marginXS iconM hoverGrey300 paddingS " src="Instagram.svg" alt="Instagram" title="Instagram">
+            </a>
+            <a target="_blank" href="/" title="LinkedIn">
+              <img class="marginXS iconM hoverGrey300 paddingS " src="LinkedIn.svg" alt="LinkedIn">
+            </a>
+            <a target="_blank" href="/" title="YouTube">
+              <img class="marginXS iconM hoverGrey300 paddingS " src="YouTube.svg" alt="YouTube">
             </a>
           </div>
-        </div>
-        <div class="Grid Grid--gutters">
-          <a target="_blank" href="/">
-            <img class="marginXS iconM hoverGrey300 paddingS " src="Facebook.svg" alt="Facebook" title="Facebook">
-          </a>
-          <a target="_blank" href="/" title="Twitter">
-            <img class="marginXS iconM hoverGrey300 paddingS " src="Twitter.svg" alt="Twitter">
-          </a>
-
-          <a target="_blank" href="/">
-            <img class="marginXS iconM hoverGrey300 paddingS " src="Instagram.svg" alt="Instagram" title="Instagram">
-          </a>
-          <a target="_blank" href="/" title="LinkedIn">
-            <img class="marginXS iconM hoverGrey300 paddingS " src="LinkedIn.svg" alt="LinkedIn">
-          </a>
-          <a target="_blank" href="/" title="YouTube">
-            <img class="marginXS iconM hoverGrey300 paddingS " src="YouTube.svg" alt="YouTube">
-          </a>
-        </div>
-        <h6>We're delivering on our mission by providing whole-person virtual care that includes primary care, mental
-          health, chronic condition management and more.</h6>
-      </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="Grid Grid--gutters Grid--cols-6">
-        <div class="Grid-cell">
-          <div class="element">
-
-            <h5> <strong class="styleCap"> Features </strong> </h5>
-            <div class="blankHXXS"></div>
-            <a href="/">
-              <h6> Blog </h6>
-            </a>
-            <a href="/">
-              <h6> Provider Directory </h6>
-            </a>
-            <a href="/">
-              <h6> Learn More </h6>
-            </a>
-            <a href="/">
-              <h6> About us </h6>
-            </a>
-          </div>
-        </div>
-
-
-        <div class="Grid-cell">
-          <div class="element">
-
-            <h5> <strong class="styleCap"> Privacy policy </strong> </h5>
-            <div class="blankHXXS"></div>
-            <a href="/">
-              <h6> Acceptable Use Policy </h6>
-            </a>
-            <a href="/">
-              <h6> Healthcare provider terms of Use </h6>
-            </a>
-            <a href="/">
-              <h6> Terms of Use </h6>
-            </a>
-            <a href="/">
-              <h6> Information Authorization </h6>
-            </a>
-          </div>
-        </div>
-
-
-        <div class="Grid-cell">
-          <div class="element">
-
-            <h5> <strong class="styleCap"> LASO Products </strong> </h5>
-            <div class="blankHXXS"></div>
-            <a href="/">
-              <h6> RX Zero </h6>
-            </a>
-            <a href="/">
-              <h6> Telemedicine </h6>
-            </a>
-            <a href="/">
-              <h6> RX Local </h6>
-            </a>
-            <a href="/">
-              <h6> LASO Local </h6>
-            </a>
-          </div>
+          <h6>We're delivering on our mission by providing whole-person virtual care that includes primary care, mental
+            health, chronic condition management and more.</h6>
         </div>
       </div>
+      <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--cols-6">
+          <div class="Grid-cell">
+            <div class="element">
 
+              <h5> <strong class="styleCap"> Features </strong> </h5>
+              <div class="blankHXXS"></div>
+              <a href="/">
+                <h6> Blog </h6>
+              </a>
+              <a href="/">
+                <h6> Provider Directory </h6>
+              </a>
+              <a href="/">
+                <h6> Learn More </h6>
+              </a>
+              <a href="/">
+                <h6> About us </h6>
+              </a>
+            </div>
+          </div>
+
+
+          <div class="Grid-cell">
+            <div class="element">
+
+              <h5> <strong class="styleCap"> Privacy policy </strong> </h5>
+              <div class="blankHXXS"></div>
+              <a href="/">
+                <h6> Acceptable Use Policy </h6>
+              </a>
+              <a href="/">
+                <h6> Healthcare provider terms of Use </h6>
+              </a>
+              <a href="/">
+                <h6> Terms of Use </h6>
+              </a>
+              <a href="/">
+                <h6> Information Authorization </h6>
+              </a>
+            </div>
+          </div>
+
+
+          <div class="Grid-cell">
+            <div class="element">
+
+              <h5> <strong class="styleCap"> LASO Products </strong> </h5>
+              <div class="blankHXXS"></div>
+              <a href="/">
+                <h6> RX Zero </h6>
+              </a>
+              <a href="/">
+                <h6> Telemedicine </h6>
+              </a>
+              <a href="/">
+                <h6> RX Local </h6>
+              </a>
+              <a href="/">
+                <h6> LASO Local </h6>
+              </a>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
+
   </div>
+
   <div class="blankHS"></div>
   <div class="Grid Grid--full wrapper u-textCenter">
     <div class="Grid-cell">
