--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -18,8 +18,7 @@
 
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
 
   <!-- Open Graph / Facebook -->
@@ -48,7 +47,7 @@
 
 
 
-  
+
 
 
 
@@ -216,7 +215,8 @@
           <p class="lineHorizAll"></p>
           <h4>Two volums create one spcace</h4>
 
-          <h5>The two volumes are designed to differentiate between programs for public access and those for private use in the Recreation Commons.</h5>
+          <h5>The two volumes are designed to differentiate between programs for public access and those for private use
+            in the Recreation Commons.</h5>
         </div>
       </div>
 
@@ -247,7 +247,8 @@
       </div>
       <div class="Grid-cell">
         <h4>PRIVATE VS. PUBLIC</h4>
-        <h5>Integrate two volumes within a single space to differentiate between the main programs: one for public access and the other for private purposes.</p>
+        <h5>Integrate two volumes within a single space to differentiate between the main programs: one for public
+          access and the other for private purposes.</p>
         </h5>
       </div>
     </div>
@@ -554,95 +555,100 @@
 <footer class="GreyBg100">
 
   <div class="blankHS"></div>
+  <div class="wrapper">
 
-  <div class="Grid Grid--gutters Grid--1of3 wrapper">
-    <div class="Grid-cell">
+    <div class="Grid Grid--gutters Grid--1of3 ">
+      <div class="Grid-cell">
 
-      <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-      <div class="blankHXS"></div>
+        <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+        <div class="blankHXS"></div>
 
-      <div class="Grid Grid--gutters">
-        <div class="ClipboardBoxIconOnly">
-          <button class="ClipboardIconOnly">
-            <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-              title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
-            <p class="clickIconCopy">vickyw.design@gmail.com</p>
-          </button>
+        <div class="Grid Grid--gutters">
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly">
+              <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+              <p class="clickIconCopy">vickyw.design@gmail.com</p>
+            </button>
+          </div>
+          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+          </a>
+
+          <a target="_blank" href="https://github.com/vicky-wyq">
+            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+              title="GitHub">
+          </a>
+
+          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+          </a>
+
+          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+            <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+              title="Instagram">
+          </a>
         </div>
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
-        </a>
-
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub" title="GitHub">
-        </a>
-
-        <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
-        </a>
-
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
-            title="Instagram">
-        </a>
+        <div class="blankHXS"></div>
       </div>
-      <div class="blankHXS"></div>
-    </div>
-    <div class="Grid-cell">
-      <div class="Grid Grid--gutters Grid--cols-6">
-        <div class="Grid-cell">
-          <h5> <strong> Project </strong> </h5>
-          <div class="blankHXXS"></div>
-          <a href="/glorify/">
-            <h6> <strong class="Grey700">Glorify</strong> </h6>
-          </a>
+      <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--cols-6">
+          <div class="Grid-cell">
+            <h5> <strong> Project </strong> </h5>
+            <div class="blankHXXS"></div>
+            <a href="/glorify/">
+              <h6> <strong class="Grey700">Glorify</strong> </h6>
+            </a>
 
-          <h6>Elevating Community Involvement</h6>
-          <div class="blankHXXS"></div>
-          <a href="/appointa/">
-            <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-          </a>
-          <h6>Simplifying Interview Coordination</h6>
-          <div class="blankHXXS"></div>
-          <a href="/seer/">
-            <h6> <strong class="Grey700">SEER</strong> </h6>
-          </a>
-          <h6>Empowering Brand Managers with Insights</h6>
+            <h6>Elevating Community Involvement</h6>
+            <div class="blankHXXS"></div>
+            <a href="/appointa/">
+              <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+            </a>
+            <h6>Simplifying Interview Coordination</h6>
+            <div class="blankHXXS"></div>
+            <a href="/seer/">
+              <h6> <strong class="Grey700">SEER</strong> </h6>
+            </a>
+            <h6>Empowering Brand Managers with Insights</h6>
+          </div>
+
+          <div class="Grid-cell">
+            <h5> <strong> Service </strong> </h5>
+            <div class="blankHXXS"></div>
+
+            <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+            <h6>Creating Intuitive User Experiences</h6>
+            <div class="blankHXXS"></div>
+
+            <h6> <strong class="Grey700">Design Research </strong> </h6>
+            <h6>In-depth Analysis for Targeted Solutions</h6>
+            <div class="blankHXXS"></div>
+
+            <h6> <strong class="Grey700">Web Development </strong> </h6>
+            <h6>Seamless Design Implementation</h6>
+            <div class="blankHXXS"></div>
+
+            <h6> <strong class="Grey700">Branding </strong> </h6>
+            <h6>Crafting Memorable Brand Identities</h6>
+          </div>
+
+          <div class="Grid-cell">
+            <h5> <strong> About </strong> </h5>
+            <div class="blankHXXS"></div>
+
+            <a href="/about">
+              <h6>About me</h6>
+            </a>
+            <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+          </div>
         </div>
 
-        <div class="Grid-cell">
-          <h5> <strong> Service </strong> </h5>
-          <div class="blankHXXS"></div>
-
-          <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-          <h6>Creating Intuitive User Experiences</h6>
-          <div class="blankHXXS"></div>
-
-          <h6> <strong class="Grey700">Design Research </strong> </h6>
-          <h6>In-depth Analysis for Targeted Solutions</h6>
-          <div class="blankHXXS"></div>
-
-          <h6> <strong class="Grey700">Web Development </strong> </h6>
-          <h6>Seamless Design Implementation</h6>
-          <div class="blankHXXS"></div>
-
-          <h6> <strong class="Grey700">Branding </strong> </h6>
-          <h6>Crafting Memorable Brand Identities</h6>
-        </div>
-
-        <div class="Grid-cell">
-          <h5> <strong> About </strong> </h5>
-          <div class="blankHXXS"></div>
-
-          <a href="/about">
-            <h6>About me</h6>
-          </a>
-          <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
-        </div>
       </div>
-
     </div>
+
   </div>
+
   <div class="blankHS"></div>
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
