--- a/seer/index.html
+++ b/seer/index.html
@@ -231,43 +231,44 @@
     </div>
   </div>
   <div class="blankHXS"></div>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-3">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner">
 
-  <div class="Grid Grid--gutters Grid--cols-3 wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <div class="elementInner">
+            <h3><strong>Opportunity</strong></h3>
+            <h4>Reddit is the platform where people comes to discuss product and brands. Business
+              owners want to know the engagement and sentiment of people.
+            </h4>
 
-          <h3><strong>Opportunity</strong></h3>
-          <h4>Reddit is the platform where people comes to discuss product and brands. Business
-            owners want to know the engagement and sentiment of people.
-          </h4>
-
+          </div>
         </div>
       </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
+      <div class="Grid-cell">
+        <div class="element">
 
-        <div class="elementInner">
+          <div class="elementInner">
 
-          <h3><strong>Goal</strong></h3>
+            <h3><strong>Goal</strong></h3>
 
-          <h4>The marketing manager spends a lot of time on understand their users. My goal is to
-            help them further understand potential users and promote their brand more effectively on
-            Reddit.</h4>
+            <h4>The marketing manager spends a lot of time on understand their users. My goal is to
+              help them further understand potential users and promote their brand more effectively on
+              Reddit.</h4>
 
+          </div>
         </div>
       </div>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
+      <div class="Grid-cell">
+        <div class="element">
 
-        <div class="elementInner">
+          <div class="elementInner">
 
-          <h3><strong>Target users</strong></h3>
+            <h3><strong>Target users</strong></h3>
 
-          <h4>Brand marketers and brand managers typically work at medium to large companies</h4>
+            <h4>Brand marketers and brand managers typically work at medium to large companies</h4>
 
+          </div>
         </div>
       </div>
     </div>
@@ -1780,8 +1781,8 @@
   <div class="blankHL"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h5 class="element ">Check out my website for more info </h5>
-      <a href="https://vickywang.me" class="textUnderline" target="_blank">VICKYWANG.ME</a>
+      <h5 class="element ">Feel free to explore my website for further details </h5>
+      <a href="https://vickywang.me" class="textDecor" target="_blank">VICKYWANG.ME</a>
     </div>
   </div>
   <div class="blankHL"></div>
@@ -1820,112 +1821,117 @@
     </div>
   </button>
   <!--back to top-->
-<!--footer-->
-<footer class="GreyBg100">
+  <!--footer-->
+  <footer class="GreyBg100">
 
-  <div class="blankHS"></div>
+    <div class="blankHS"></div>
+    <div class="wrapper">
 
-  <div class="Grid Grid--gutters Grid--1of3 wrapper">
-    <div class="Grid-cell">
-
-      <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-      <div class="blankHXS"></div>
-
-      <div class="Grid Grid--gutters">
-        <div class="ClipboardBoxIconOnly">
-          <button class="ClipboardIconOnly">
-            <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-              title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-            <p class="clickIconCopy">vickyw.design@gmail.com</p>
-          </button>
-        </div>
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-        </a>
-
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
-        </a>
-
-        <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-        </a>
-
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
-            title="Instagram">
-        </a>
-      </div>
-      <div class="blankHXS"></div>
-    </div>
-    <div class="Grid-cell">
-      <div class="Grid Grid--gutters Grid--cols-6">
+      <div class="Grid Grid--gutters Grid--1of3 ">
         <div class="Grid-cell">
-          <h5> <strong> Project </strong> </h5>
-          <div class="blankHXXS"></div>
-          <a href="/glorify/">
-            <h6> <strong class="Grey700">Glorify</strong> </h6>
-          </a>
 
-          <h6>Elevating Community Involvement</h6>
-          <div class="blankHXXS"></div>
-          <a href="/appointa/">
-            <h6> <strong class="Grey700">APPOINTA</strong> </h6>
-          </a>
-          <h6>Simplifying Interview Coordination</h6>
-          <div class="blankHXXS"></div>
-          <a href="/seer/">
-            <h6> <strong class="Grey700">SEER</strong> </h6>
-          </a>
-          <h6>Empowering Brand Managers with Insights</h6>
+          <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly">
+                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
+                  title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">vickyw.design@gmail.com</p>
+              </button>
+            </div>
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
+            </a>
+
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
+                title="GitHub">
+            </a>
+
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
+            </a>
+
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
+                title="Instagram">
+            </a>
+          </div>
+          <div class="blankHXS"></div>
         </div>
-
         <div class="Grid-cell">
-          <h5> <strong> Service </strong> </h5>
-          <div class="blankHXXS"></div>
+          <div class="Grid Grid--gutters Grid--cols-6">
+            <div class="Grid-cell">
+              <h5> <strong> Project </strong> </h5>
+              <div class="blankHXXS"></div>
+              <a href="/glorify/">
+                <h6> <strong class="Grey700">Glorify</strong> </h6>
+              </a>
 
-          <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
-          <h6>Creating Intuitive User Experiences</h6>
-          <div class="blankHXXS"></div>
+              <h6>Elevating Community Involvement</h6>
+              <div class="blankHXXS"></div>
+              <a href="/appointa/">
+                <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+              </a>
+              <h6>Simplifying Interview Coordination</h6>
+              <div class="blankHXXS"></div>
+              <a href="/seer/">
+                <h6> <strong class="Grey700">SEER</strong> </h6>
+              </a>
+              <h6>Empowering Brand Managers with Insights</h6>
+            </div>
 
-          <h6> <strong class="Grey700">Design Research </strong> </h6>
-          <h6>In-depth Analysis for Targeted Solutions</h6>
-          <div class="blankHXXS"></div>
+            <div class="Grid-cell">
+              <h5> <strong> Service </strong> </h5>
+              <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Web Development </strong> </h6>
-          <h6>Seamless Design Implementation</h6>
-          <div class="blankHXXS"></div>
+              <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+              <h6>Creating Intuitive User Experiences</h6>
+              <div class="blankHXXS"></div>
 
-          <h6> <strong class="Grey700">Branding </strong> </h6>
-          <h6>Crafting Memorable Brand Identities</h6>
-        </div>
+              <h6> <strong class="Grey700">Design Research </strong> </h6>
+              <h6>In-depth Analysis for Targeted Solutions</h6>
+              <div class="blankHXXS"></div>
 
-        <div class="Grid-cell">
-          <h5> <strong> About </strong> </h5>
-          <div class="blankHXXS"></div>
+              <h6> <strong class="Grey700">Web Development </strong> </h6>
+              <h6>Seamless Design Implementation</h6>
+              <div class="blankHXXS"></div>
 
-          <a href="/about">
-            <h6>About me</h6>
-          </a>
-          <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
-        </div>
-      </div>
+              <h6> <strong class="Grey700">Branding </strong> </h6>
+              <h6>Crafting Memorable Brand Identities</h6>
+            </div>
 
-    </div>
-  </div>
-  <div class="blankHS"></div>
-  <div class="Grid Grid--full wrapper">
-    <div class="Grid-cell">
-      <div class="element footerBorder">
-        <div class="element">
-          <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+            <div class="Grid-cell">
+              <h5> <strong> About </strong> </h5>
+              <div class="blankHXXS"></div>
+
+              <a href="/about">
+                <h6>About me</h6>
+              </a>
+              <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+            </div>
+          </div>
+
         </div>
       </div>
-    </div>
-  </div>
 
-</footer>
-<!--footer-->
+    </div>
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element footerBorder">
+          <div class="element">
+            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+  <!--footer-->
 
 
 
