--- a/LASO/index.html
+++ b/LASO/index.html
@@ -87,7 +87,7 @@
       </ul>
     </div>
   </header>
-  <div class="blankHS"></div>
+  <div class="blankHM"></div>
 
   <!-- header -->
   <div class="Grid Grid--full wrapper">
