--- a/LASO/index.html
+++ b/LASO/index.html
@@ -68,7 +68,7 @@
         <h5> Call us now: <strong>866-527-6757</strong></h5>
       </div>
     </div>
-    <div class="wrapper centerHorz-spacearound">
+    <div class="wrapper ">
       <a><img class="logoLASO" src="LOGO.svg"></a>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
