--- a/LASO/index.html
+++ b/LASO/index.html
@@ -8,7 +8,7 @@
 
 
   <meta name="title" content="RX Zero">
-  <title>RX Zero </title>
+  <title>RX Zero</title>
   <link rel="canonical" href="https://vickywang.me/LASO/">
   <meta name="author" content="Vicky W.">
 
@@ -97,7 +97,7 @@
           <div class="WhiteBg shadowBoxLt borderRadiusM BgImg_MedBottle centerVer">
             <div class="element">
               <div class="element">
-                <h1 class="DisplayLarge Grey900"> Stop paying too much. </h1>
+                <h1 class="specialTextL fontWeight700 Grey900"> Stop paying too much. </h1>
                 <h2 class="Grey700 widthMPhHalf"> FDA-approved generics shipped to you for only $24.99 per month. </h2>
                 <button class="Button Secondary">Subscribe Now!</button>
                 <button class="Button Primary">Search Included Meds</button>
@@ -149,7 +149,7 @@
           <div class="element">
             <div class="element">
               <div class="Grid-cell">
-                <h1 class="DisplaySmall Grey900 u-textCenter"> Over 600 Drugs Included</h1>
+                <h1 class="specialTextS fontWeight700 Grey900 u-textCenter"> Over 600 Drugs Included</h1>
               </div>
               <div class="Grid Grid--gutters Grid--cols-6">
                 <div class="Grid-cell">
@@ -202,10 +202,10 @@
   <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="shadowBoxLt borderRadiusM LASOBlueBg">
+        <div class="shadowBoxLt borderRadiusM colorBgBlue">
           <div class="element">
             <div class="element Grey100 BgImg_30Days">
-              <h1 class="DisplayLarge widthMPhHalf"> Satisfaction. Guaranteed.</h1>
+              <h1 class="specialTextL fontWeight700 widthMPhHalf"> Satisfaction. Guaranteed.</h1>
               <h3 class="widthMPhHalf"> If you don't absolutely love our service (for any reason), you can cancel your
                 membership within 30 days and we'll give you a full refund. </h3>
 
@@ -253,7 +253,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="element LASOBlueBg Grey100 borderRadiusM">
+          <div class="element colorBgBlue Grey100 borderRadiusM">
             <img class="iconXL paddingM" src="iconS_ship.png" alt="Design">
             <h5><strong class="Grey100">Free fast shipping</strong></h5>
             <h5>Fast shipping (via USPS) is included in the price of your membership.</h5>
@@ -265,7 +265,7 @@
       <div class="Grid-cell">
         <div class="element">
 
-          <div class="element LASOBlueBg Grey100 borderRadiusM">
+          <div class="element colorBgBlue Grey100 borderRadiusM">
 
             <img class="iconXL paddingM" src="iconS_chat1.png" alt="Design">
             <h5><strong class="Grey100">REFILlS BY TEXT</strong></h5>
@@ -278,7 +278,7 @@
       <div class="Grid-cell">
         <div class="element">
 
-          <div class="element LASOBlueBg Grey100 borderRadiusM">
+          <div class="element colorBgBlue Grey100 borderRadiusM">
 
             <img class="iconXL paddingM" src="iconS_chat.png" alt="Design">
             <h5><strong class="Grey100">Friendly support</strong></h5>
@@ -302,7 +302,7 @@
               <div class="Grid-cell">
                 <h4 class=" Grey900 u-textCenter styleCap"> RX ZERO MEMBERSHIP</h4>
 
-                <h1 class="DisplaySmall Grey900 u-textCenter"> How it works</h1>
+                <h1 class="specialTextS fontWeight700 Grey900 u-textCenter"> How it works</h1>
               </div>
               <div class="Grid Grid--gutters Grid--cols-2 ">
 
@@ -377,7 +377,7 @@
   </div>
   <div class="Grid-cell u-textCenter">
 
-    <h1 class="DisplaySmall Grey900 u-textCenter"> Frequently Asked Questions</h1>
+    <h1 class="specialTextS fontWeight700 Grey900 u-textCenter"> Frequently Asked Questions</h1>
   </div>
 
   <div class="wrapper">
