--- a/LASO/index.html
+++ b/LASO/index.html
@@ -34,6 +34,10 @@
 
 
 
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <!--handwriting font-family: 'Indie Flower'; -->
+
+
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
@@ -99,8 +103,8 @@
               <div class="element">
                 <h1 class="specialTextL fontWeight700 Grey900"> Stop paying too much. </h1>
                 <h2 class="Grey700 widthMPhHalf"> FDA-approved generics shipped to you for only $24.99 per month. </h2>
-                <button class="Button Secondary">Subscribe Now!</button>
-                <button class="Button Primary">Search Included Meds</button>
+                <button class="Button Large Secondary">Subscribe Now!</button>
+                <button class="Button Large Primary">Search Included Meds</button>
               </div>
             </div>
           </div>
@@ -187,7 +191,7 @@
 
 
               <div class="Grid-cell u-textCenter">
-                <button class="Button Primary">Download PDF Formulary</button>
+                <button class="Button Primary Large">Download PDF Formulary</button>
               </div>
 
             </div>
@@ -300,7 +304,7 @@
           <div class="element">
             <div class="element">
               <div class="Grid-cell">
-                <h4 class=" Grey900 u-textCenter styleCap"> RX ZERO MEMBERSHIP</h4>
+                <h5 class=" Grey900 u-textCenter styleCap fontWeight700"> RX ZERO MEMBERSHIP</h5>
 
                 <h1 class="specialTextS fontWeight700 Grey900 u-textCenter"> How it works</h1>
               </div>
@@ -371,10 +375,13 @@
       </div>
     </div>
   </div>
+  <div class="blankHXS"></div>
 
   <div class="Grid-cell u-textCenter">
-    <button class="Button Primary">Subscribe now</button>
+    <button class="Button Primary Large">Subscribe now</button>
   </div>
+  <div class="blankHXS"></div>
+
   <div class="Grid-cell u-textCenter">
 
     <h1 class="specialTextS fontWeight700 Grey900 u-textCenter"> Frequently Asked Questions</h1>
