--- a/LASO/index.html
+++ b/LASO/index.html
@@ -34,8 +34,8 @@
 
 
 
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <!--handwriting font-family: 'Indie Flower'; -->
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Indie Flower'; -->
 
 
 
@@ -67,9 +67,9 @@
 
 <body>
   <header class="header">
-    <div class="Grid Grid--full GreyBg100 headerBorder">
-      <div class="Grid-cell u-textCenter">
-        <h5> Call us now: <strong>866-527-6757</strong></h5>
+    <div class="Grid Grid--full GreyBg100 headerBorder u-textCenter">
+      <div class="Grid-cell">
+        <h5 class="centerVH "><img class="iconXS paddingXS" src="iconS_call.svg"> Call us now: <strong>866-527-6757</strong></h5>
       </div>
     </div>
     <div class="wrapper ">
@@ -84,11 +84,9 @@
         <li><a href="/" class="inactive">For Brokers</a></li>
 
 
-        <div class="BtnsBox4Header ">
-          <li> <button class="Button Secondary ">Sign in</button></li>
-          <li> <button class="Button Primary ">Sign up!</button></li>
-        </div>
-      </ul>
+        <li> <button class="Button Secondary marginS">Sign in</button></li>
+        <li> <button class="Button Primary marginS">Sign up!</button></li>
+    </div>
     </div>
   </header>
   <div class="blankHM"></div>
