--- a/LASO/index.html
+++ b/LASO/index.html
@@ -69,10 +69,12 @@
   <header class="header">
     <div class="Grid Grid--full GreyBg100 headerBorder u-textCenter">
       <div class="Grid-cell">
-        <h5 class="centerVH "><img class="iconXS paddingXS" src="iconS_call.svg"> Call us now: <strong>866-527-6757</strong></h5>
+        <h5 class="centerVH "><img class="iconXS paddingXS" src="iconS_call.svg"> Call us now:
+          <strong>866-527-6757</strong>
+        </h5>
       </div>
     </div>
-    <div class="wrapper ">
+    <div class="wrapper">
       <a><img class="logoLASO" src="LOGO.svg"></a>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -84,10 +86,29 @@
         <li><a href="/" class="inactive">For Brokers</a></li>
 
 
-        <li> <button class="Button Secondary marginS">Sign in</button></li>
-        <li> <button class="Button Primary marginS">Sign up!</button></li>
+        <li class="displayLaptop"> <button class="Button Secondary marginSFix ">Sign in</button></li>
+        <li class="displayLaptop">  <button class="Button Primary marginSFix ">Sign up!</button></li>
+
+
+
+
+
+
+
+        <li class="marginS displayTablet"> <button class="Button Secondary marginS FullWidth Large ">Sign in</button>
+        </li>
+        <li class="marginS displayTablet"> <button class="Button Primary marginS FullWidth Large ">Sign up!</button></li>
+
+
+
+
+        <li class="marginS displayPhone"> <button class="Button Secondary marginS FullWidth Large ">Sign in</button></li>
+        <li class="marginS displayPhone"> <button class="Button Primary marginS FullWidth Large ">Sign up!</button></li>
+
+
+
     </div>
-    </div>
+
   </header>
   <div class="blankHM"></div>
 
